[gd_scene load_steps=3 format=3 uid="uid://buplf561re2qv"]

[ext_resource type="Script" path="res://menu.gd" id="1_yejto"]
[ext_resource type="Texture2D" uid="uid://00c43p8q802j" path="res://asset/background1.jpg" id="2_a0pii"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yejto")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a0pii")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_top = 250.0
offset_right = 64.5
offset_bottom = 386.0
grow_horizontal = 2

[node name="SpinBox" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 5.0
value = 2.0

[node name="NamesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/NamesContainer"]
layout_mode = 2

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/NamesContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Lancer la partie"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 68.0
offset_right = 20.0
offset_bottom = 121.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 62
text = "Frieza Card Game"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.0
offset_top = 154.0
offset_right = 92.0
offset_bottom = 207.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "Apprendre en s'amusant !"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -526.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 11
text = "Par : Oren AMSALHEM / Renaud DEROUBAIX / Emmanuel FONTAINE "
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="value_changed" from="VBoxContainer/SpinBox" to="." method="_on_player_count_changed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_button_pressed"]
